--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="container">
 
-        <img id="logo" src=Logo.png" alt="Logo">
+        <img id="logo" src= "Logo.png" alt="Logo">
     </div>
 
     <div class="paragrafo">
